# arkanoid

./: CMakeLists.txt  README.md  run.sh
src/: main.cpp
src/ball/: ball.hpp
src/bonus/: bonus.hpp
src/brick/: brick.cpp  brick.hpp
src/game/: game.cpp  game.hpp
src/game_board/: game_board.cpp  game_board.hpp
src/hittable_object/: hittable_object.hpp
src/input_handler/: input_handler.hpp
src/paddle/: paddle.cpp  paddle.hpp
src/ui/: ui.hpp
src/utils/: utils.cpp  utils.hpp
src/window/: window.cpp  window.hpp
